--- a/index.html
+++ b/index.html
@@ -16,23 +16,53 @@
   -->
   <base href="/fluttercustomerapp/">
 
+
+
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
-
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="cms_flutter">
+  <meta name="apple-mobile-web-app-title" content="first_flutter_project">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>cms_flutter</title>
+  <title>first_flutter_project</title>
   <link rel="manifest" href="manifest.json">
+
+
+  <head>
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-analytics.js"></script>
+    <script>
+      const firebaseConfig = {
+   apiKey: "AIzaSyCjbErfIeBjnhp7jzOmbQcEi9ItuInT5Oo",
+   authDomain: "flutterfirebaseproject-192f4.firebaseapp.com",
+   projectId: "flutterfirebaseproject-192f4",
+   storageBucket: "flutterfirebaseproject-192f4.firebasestorage.app",
+   messagingSenderId: "463610780561",
+   appId: "1:463610780561:web:2f8db680fd846b4656d830",
+   measurementId: "G-QW5DQXDT0M"
+ };
+    firebase.initializeApp(firebaseConfig);
+     firebase.analytics();
+    </script>
+
+    <head>
+      <!-- ... -->
+      <script type="application/javascript" src="/assets/packages/flutter_inappwebview/assets/web/web_support.js" defer></script>
+      <!-- ... -->
+    </head>
+  </head>
+
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+
+<script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
